# cat_drug_synergy

./: .gitignore  Commutative, Pearson and Callbacks.ipynb  Drug_pair_analysis.ipynb  Evaluation_pipeline.ipynb  Extracting embedding dictionary.ipynb  Output drug combination Pearson score for single drug pairs.ipynb  README.md  Training Pipeline and molecular fingerprints.ipynb  Training Pipeline and molecular fingerprints_ failing function.ipynb  Visualizing_embeddings.ipynb  Word_embeddings_colab.ipynb  Word_embeddings_colaboratory.ipynb  Word_embeddings_colaboratory_05_3_2021.ipynb  Word_embeddings_colaboratory_19_2_2021.ipynb  Word_embeddings_colaboratory_19_2_2021.ipynb.ipynb  Word_embeddings_colaboratory_27_2_2021.ipynb  Word_embeddings_colaboratory_8_2_2021.ipynb  Word_embeddings_colaboratory_commutative.ipynb  benchmark_embedding_seeds.sh  benchmark_embedding_seeds_fingerprints.sh  benchmark_embedding_seeds_fingerprints_parallel.sh  benchmark_sklearn_embedding_seeds.sh  benchmark_sklearn_seeds.sh  benchmark_smiles_strategies.sh  evaluate_bs_pytorch_tabular_smiles.sh  evaluate_encodings.sh  exploratory data analysis astrazeneca.py  fingerprints_without_training_pipeline.ipynb  jupyter_env.txt  modelling_astrazeneca.py  requirements.txt  setup.cfg  setup.py  submit_fp_training.sh  submit_fp_training_AutoInt.sh  submit_fp_training_seed_42.sh  submit_fp_training_seed_42_AutoInt.sh  word_embedding.ipynb  word_embedding_modificado.ipynb
.pt_tmp/: exp_version_manager.yml
benchmark_smiles_seed_42/: OneHotEncoder_morgan_fp_nan_1024.csv  (+5 more)
(+770 files in other folders)
